[tool.poetry]
name = "pincushion"
version = "0.1.0"
description = "Aggregate my web activity into pinboard"
authors = ["Scott Rubin <apreche@frontrowcrew.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
praw = "^7.1.0"
pickledb = "^0.9.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
